deploy: 29c6781eb5f715385d84ace7c28dbf266f0ee154

--- a/cv.tex
+++ b/cv.tex
@@ -596,6 +596,9 @@
     \item {\bf José Bacelar Almeida} (Universidade do Minho)
 
 
+    \item {\bf Konstantinos Athanasiou} (Northeastern University)
+
+
     \item {\bf Mohamed Faouzi Atig} (Uppsala University)
 
 
@@ -603,6 +606,12 @@
 
 
     \item {\bf Gilles Barthe} (IMDEA Software)
+
+
+    \item {\bf Sidi Mohamed Beillahi} (Université de Paris)
+
+
+    \item {\bf Ranadeep Biswas} (Université de Paris)
 
 
     \item {\bf Ahmed Bouajjani} (Paris 7)
@@ -621,6 +630,9 @@
 
 
     \item {\bf Jeremy Condit} (MSR)
+
+
+    \item {\bf Byron Cook} (Amazon Web Services)
 
 
     \item {\bf François Dupressoir} (IMDEA Software)
@@ -656,7 +668,13 @@
     \item {\bf Ranjit Jhala} (UCSD)
 
 
+    \item {\bf Dejan Jovanovic} (SRI International)
+
+
     \item {\bf Eddie Kohler} (Harvard)
+
+
+    \item {\bf Siddharth Krishna} (New York University)
 
 
     \item {\bf Akash Lal} (MSR)
@@ -666,6 +684,9 @@
 
 
     \item {\bf Roman Manevich} (UCLA)
+
+
+    \item {\bf Colm MacCarthaigh} (Amazon Web Services)
 
 
     \item {\bf Kedar Namjoshi} (Nokia Bell Labs)
@@ -693,6 +714,9 @@
 
 
     \item {\bf Fernando Rosa-Velardo} (Universidad Complutense de Madrid)
+
+
+    \item {\bf Daniel Schwartz-Narbonne} (Amazon Web Services)
 
 
     \item {\bf Koushik Sen} (University of California, Berkeley)
