deploy: 1d3eea6e36755670fe6b9248f5847fe2a310863d

--- a/cv.tex
+++ b/cv.tex
@@ -159,7 +159,9 @@
 
   \begin{description}[leftmargin=0cm]
 
-    \item[Program Committee.]  (SAS ’21).
+    \item[Program Committee.] \href{%
+    https://conf.researchr.org/home/sas-2021}{%
+    27th International Static Analysis Symposium} (SAS ’21).
 
 
     \item[Program Committee.] \href{%
