deploy: 453c927ad29fc869a66cd6f383723d1b483a0e8d

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://popl22.sigplan.org}{%
+    49th ACM SIGPLAN Symposium on Principles of Programming Languages} (POPL ’22).
+
+
+    \item[Program Committee.] \href{%
     https://conf.researchr.org/home/sas-2021}{%
     27th International Static Analysis Symposium} (SAS ’21).
 
