--- a/cv.tex
+++ b/cv.tex
@@ -159,6 +159,9 @@
 
   \begin{description}[leftmargin=0cm]
 
+    \item[Program Committee.]  (CSF ’22).
+
+
     \item[Program Committee.] \href{%
     https://popl22.sigplan.org}{%
     49th ACM SIGPLAN Symposium on Principles of Programming Languages} (POPL ’22).
