deploy: 4945850dbddc3d50edfa03e5e800f8826d161603

--- a/cv.tex
+++ b/cv.tex
@@ -385,7 +385,12 @@
 
   \begin{itemize}[leftmargin=0cm,label={}]
 
-    \item Sidi Mohamed Beillahi, Gabriela Ciocarlie, Michael Emmi, Constantin Enea. {\bfBehavioral Simulation for Smart Contracts.} In \emph{ Proc. 41st annual ACM SIGPLAN conference on Programming Language Design and Implementation } (PLDI ’20), pages 470–486. ACM, 2020. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-pldi-BeillahiCEE20.pdf}{PDF})
+    \item Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser. {\bfRAPID: Checking API Usage for the Cloud in the Cloud.} In \emph{ 29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering } (ESEC/FSE ’21). ACM, 2021. 
+
+
+    \item Sidi Mohamed Beillahi, Gabriela Ciocarlie, Michael Emmi, Constantin Enea. {\bf\href{%
+    https://doi.org/10.1145/3385412.3386022}{%
+    Behavioral Simulation for Smart Contracts.}} In \emph{ Proc. 41st annual ACM SIGPLAN conference on Programming Language Design and Implementation } (PLDI ’20), pages 470–486. ACM, 2020. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-pldi-BeillahiCEE20.pdf}{PDF})
 
 
     \item Siddharth Krishna, Michael Emmi, Constantin Enea, Dejan Jovanovic. {\bf\href{%
@@ -393,7 +398,9 @@
     Verifying Visibility-Based Weak Consistency.}} In \emph{ Proc. 29th European Symposium on Programming } (ESOP ’20), LNCS, volume 12075, pages 280–307. Springer, 2020. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-esop-KrishnaEEJ20.pdf}{PDF})
 
 
-    \item Michael Emmi, Shaobo He, and Gabriela Ciocarlie. {\bfct-fuzz: Fuzzing for Timing Leaks.} In \emph{ 13th IEEE Conference on Software Testing, Validation and Verification } (ICST ’20), pages 466–471. IEEE, 2020. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-icst-HeEC20.pdf}{PDF})
+    \item Michael Emmi, Shaobo He, and Gabriela Ciocarlie. {\bf\href{%
+    https://doi.org/10.1109/ICST46399.2020.00063}{%
+    ct-fuzz: Fuzzing for Timing Leaks.}} In \emph{ 13th IEEE Conference on Software Testing, Validation and Verification } (ICST ’20), pages 466–471. IEEE, 2020. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-icst-HeEC20.pdf}{PDF})
 
 
     \item Ranadeep Biswas, Michael Emmi, and Constantin Enea. {\bf\href{%
