deploy: a7c1586ed1ba275e1d2e265cc6292de0b7f55333

--- a/cv.tex
+++ b/cv.tex
@@ -159,6 +159,9 @@
 
   \begin{description}[leftmargin=0cm]
 
+    \item[Program Committee.]  (ATVA ’22).
+
+
     \item[Program Committee.]  (CSF ’22).
 
 
