--- a/cv.tex
+++ b/cv.tex
@@ -162,7 +162,9 @@
     \item[Program Committee.]  (ATVA ’22).
 
 
-    \item[Program Committee.]  (CSF ’22).
+    \item[Program Committee.] \href{%
+    https://www.ieee-security.org/TC/CSF2022/}{%
+    35th IEEE Computer Security Foundations Symposium} (CSF ’22).
 
 
     \item[Program Committee.] \href{%
