deploy: 557f373e938f84d66ff8f766cb69317e918232db

--- a/cv.tex
+++ b/cv.tex
@@ -159,6 +159,11 @@
 
   \begin{description}[leftmargin=0cm]
 
+    \item[Program Committee.] \href{%
+    https://www.ieee-security.org/TC/CSF2023/}{%
+    36th IEEE Computer Security Foundations Symposium} (CSF ’23).
+
+
     \item[Program Committee.]  (ESOP ’23).
 
 
