deploy: 5cf95c1e9ebc005ffffee8270f8cf1bba00d531a

--- a/cv.tex
+++ b/cv.tex
@@ -167,6 +167,11 @@
     \item[Program Committee.]  (ESOP ’23).
 
 
+    \item[Program Chair.] \href{%
+    https://smackers.github.io/democratizing-software-verification-workshop-2022/}{%
+    Workshop on Democratizing Software Verification} (DSV ’22).
+
+
     \item[Program Committee.] \href{%
     https://atva-conference.org/2022/}{%
     20th International Symposium on Automated Technology for Verification and Analysis} (ATVA ’22).
