--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    http://i-cav.org/2023/}{%
+    35th International Conference on Computer Aided Verification} (CAV ’23).
+
+
+    \item[Program Committee.] \href{%
     https://www.ieee-security.org/TC/CSF2023/}{%
     36th IEEE Computer Security Foundations Symposium} (CSF ’23).
 
