--- a/cv.tex
+++ b/cv.tex
@@ -410,7 +410,9 @@
 
   \begin{itemize}[leftmargin=0cm,label={}]
 
-    \item Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser. {\bfRAPID: Checking API Usage for the Cloud in the Cloud.} In \emph{ 29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering } (ESEC/FSE ’21). ACM, 2021. 
+    \item Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser. {\bf\href{%
+    https://doi.org/10.1145/3468264.3473934}{%
+    RAPID: Checking API Usage for the Cloud in the Cloud.}} In \emph{ 29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering } (ESEC/FSE ’21). ACM, 2021. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-sigsoft-EmmiHJPRSSV21.pdf}{PDF})
 
 
     \item Sidi Mohamed Beillahi, Gabriela Ciocarlie, Michael Emmi, Constantin Enea. {\bf\href{%
