deploy: 6f2be3fb5ad0c01340b7a3cf612478419d421706

--- a/cv.tex
+++ b/cv.tex
@@ -164,6 +164,11 @@
     35th International Conference on Computer Aided Verification} (CAV ’23).
 
 
+    \item[Program Chair.] \href{%
+    https://popl23.sigplan.org/home/VMCAI-2023}{%
+    24th International Conference on Verification, Model Checking, and Abstract Interpretation} (VMCAI ’23).
+
+
     \item[Program Committee.] \href{%
     https://www.ieee-security.org/TC/CSF2023/}{%
     36th IEEE Computer Security Foundations Symposium} (CSF ’23).
