deploy: d41177f6dafae28e1cfff5f3f9bdf8430f9219f1

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://conf.researchr.org/home/sas-2023}{%
+    30th Static Analysis Symposium} (SAS ’23).
+
+
+    \item[Program Committee.] \href{%
     http://i-cav.org/2023/}{%
     35th International Conference on Computer Aided Verification} (CAV ’23).
 
