deploy: 332b6254cb1dd34e638961495ad30aedfce64a0a

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://popl24.sigplan.org/home/VMCAI-2024}{%
+    25th International Conference on Verification, Model Checking, and Abstract Interpretation} (VMCAI ’24).
+
+
+    \item[Program Committee.] \href{%
     https://conf.researchr.org/home/sas-2023}{%
     30th Static Analysis Symposium} (SAS ’23).
 
