--- a/cv.tex
+++ b/cv.tex
@@ -165,6 +165,11 @@
 
 
     \item[Program Committee.] \href{%
+    https://csf2024.ieee-security.org}{%
+    37th IEEE Computer Security Foundations Symposium} (CSF ’24).
+
+
+    \item[Program Committee.] \href{%
     https://conf.researchr.org/home/sas-2023}{%
     30th Static Analysis Symposium} (SAS ’23).
 
