deploy: 48a621429aaf382dfbdef66cae34ddddd2b34388

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://pldi24.sigplan.org}{%
+    45th ACM SIGPLAN Conference on Programming Language Design and Implementation} (PLDI ’24).
+
+
+    \item[Program Committee.] \href{%
     https://popl24.sigplan.org/home/VMCAI-2024}{%
     25th International Conference on Verification, Model Checking, and Abstract Interpretation} (VMCAI ’24).
 
