--- a/cv.tex
+++ b/cv.tex
@@ -435,6 +435,11 @@
 
   \begin{itemize}[leftmargin=0cm,label={}]
 
+    \item Subarno Banerjee, Siwei Cui, Michael Emmi, Antonio Filieri, Liana Hadarean, Peixuan Li, Linghui Luo, Goran Piskachev, Nicolás Rosner, Aritra Sengupta, Omer Tripp, Jingbo Wang. {\bf\href{%
+    https://doi.org/10.1145/3611643.3613889}{%
+    Compositional Taint Analysis for Enforcing Security Policies at Scale.}} In \emph{ 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering } (ESEC/FSE ’23). ACM, 2023. 
+
+
     \item Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser. {\bf\href{%
     https://doi.org/10.1145/3468264.3473934}{%
     RAPID: Checking API Usage for the Cloud in the Cloud.}} In \emph{ 29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering } (ESEC/FSE ’21). ACM, 2021. (\href{https://michael-emmi.github.io/https://github.com/michael-emmi/research-papers/raw/master/conf-sigsoft-EmmiHJPRSSV21.pdf}{PDF})
