deploy: dc8e268ab4c19c60e9600014b96f863e44836119

--- a/cv.tex
+++ b/cv.tex
@@ -679,6 +679,9 @@
     \item {\bf Mohamed Faouzi Atig} (Uppsala University)
 
 
+    \item {\bf Subarno Banerjee} (Amazon Web Services)
+
+
     \item {\bf Manuel Barbosa} (University of Porto)
 
 
@@ -712,6 +715,9 @@
     \item {\bf Byron Cook} (Amazon Web Services)
 
 
+    \item {\bf Siwei Cui} (Texas A&M University)
+
+
     \item {\bf François Dupressoir} (IMDEA Software)
 
 
@@ -721,6 +727,9 @@
     \item {\bf Petros Faloutsos} (UCLA)
 
 
+    \item {\bf Antonio Filieri} (Amazon Web Services)
+
+
     \item {\bf Jeffrey S. Fischer} (UCLA)
 
 
@@ -728,6 +737,9 @@
 
 
     \item {\bf Dimitra Giannakopoulou} (NASA Ames)
+
+
+    \item {\bf Liana Hadarean} (Amazon Web Services)
 
 
     \item {\bf Jad Hamza} (Paris 7)
@@ -757,6 +769,12 @@
     \item {\bf Akash Lal} (MSR)
 
 
+    \item {\bf Peixuan Li} (Amazon Web Services)
+
+
+    \item {\bf Linghui Luo} (Amazon Web Services)
+
+
     \item {\bf Rupak Majumdar} (MPI-SWS)
 
 
@@ -781,6 +799,12 @@
     \item {\bf Frances Perry} (Princeton University)
 
 
+    \item {\bf Lee Pike} (Amazon Web Services)
+
+
+    \item {\bf Goran Piskachev} (Amazon Web Services)
+
+
     \item {\bf Polyvios Pratikaki} (University of Maryland)
 
 
@@ -793,16 +817,34 @@
     \item {\bf Fernando Rosa-Velardo} (Universidad Complutense de Madrid)
 
 
+    \item {\bf Nicolás Rosner} (Amazon Web Services)
+
+
+    \item {\bf Martin Schäf} (Amazon Web Services)
+
+
     \item {\bf Daniel Schwartz-Narbonne} (Amazon Web Services)
 
 
     \item {\bf Koushik Sen} (University of California, Berkeley)
 
 
+    \item {\bf Aritra Sengupta} (Amazon Web Services)
+
+
     \item {\bf Serdar Tasiran} (Koç University)
 
 
+    \item {\bf Omer Tripp} (Amazon Web Services)
+
+
+    \item {\bf Willem Visser} (Amazon Web Services)
+
+
     \item {\bf Alice Wang} (UCLA)
+
+
+    \item {\bf Jingbo Wang} (USC)
 
 
     \item {\bf Jonathan Whitaker} (University of Utah)
