deploy: e93c30ccd0ab6504942505a4f4866d3db2ed14d3

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://popl24.sigplan.org}{%
+    52nd ACM SIGPLAN Symposium on Principles of Programming Languages} (POPL ’25).
+
+
+    \item[Program Committee.] \href{%
     https://pldi24.sigplan.org}{%
     45th ACM SIGPLAN Conference on Programming Language Design and Implementation} (PLDI ’24).
 
