deploy: 27f0f9fbf0db60f466851d23aa80b6bf728a22e4

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://csf2025.ieee-security.org}{%
+    38th IEEE Computer Security Foundations Symposium} (CSF ’25).
+
+
+    \item[Program Committee.] \href{%
     https://popl25.sigplan.org}{%
     52nd ACM SIGPLAN Symposium on Principles of Programming Languages} (POPL ’25).
 
