deploy: cf7fe63b3f85b40cc60e088d3b6654b8e45ed54b

--- a/cv.tex
+++ b/cv.tex
@@ -160,6 +160,11 @@
   \begin{description}[leftmargin=0cm]
 
     \item[Program Committee.] \href{%
+    https://conferences.i-cav.org/2025/}{%
+    37th International Conference on Computer Aided Verification} (CAV ’25).
+
+
+    \item[Program Committee.] \href{%
     https://csf2025.ieee-security.org}{%
     38th IEEE Computer Security Foundations Symposium} (CSF ’25).
 
